<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_radius"
    android:fontFamily="@font/quicksand_bold"
    android:textColor="@color/colorIconsText"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".feature.core.login.MainActivity">

    <EditText
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/hint_email"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapebutton"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_login"/>

</LinearLayout>