<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#b0bec5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.customer.table.TableNumberActivity">

    <TextView
        android:id="@+id/tv_activity_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_margin_onehundred_eighty"
        android:background="@drawable/background_bottom_radius"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/foodcourt_amikom"
        android:textColor="@color/colorIconsText"
        android:textSize="35dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_activity_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="Input Table Number"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/textsize_twenty"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_input"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/shapebutton"
            android:fontFamily="@font/quicksand_bold"
            android:padding="20dp"
            android:textColor="#e2f1f8"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="72dp"
            android:text="@string/add_number"/>
        <Button
            android:id="@+id/btn_barcode"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/shapebutton"
            android:fontFamily="@font/quicksand_bold"
            android:padding="20dp"
            android:textColor="#e2f1f8"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="72dp"

            android:text="@string/scan_barcode"/>
    </LinearLayout>

</LinearLayout>